--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,44 +2,33 @@ version: '3.1'
 
 services:
   springboot:
-    image: dockerhandson/spring-boot-mongo:latest
-    restart: always # This will be ignored if we deploy in docker swarm
+    image: sasi0328/springboot:1
     environment:
     - MONGO_DB_HOSTNAME=mongo
-    - MONGO_DB_USERNAME=devdb
-    - MONGO_DB_PASSWORD=devdb123
+    - MONGO_DB_USERNAME=sasi9100
+    - MONGO_DB_PASSWORD=sasi9100
     ports:
-      - 8080:8080
+      - 8081:8080
     working_dir: /opt/app
     depends_on:
       - mongo
     networks:
-    - springappnetwork  
-    deploy:  # This will be considered only in docker swarm.
-      replicas: 2
-      update_config:
-        parallelism: 1
-        delay: 20s
-      restart_policy:
-        condition: on-failure
-        delay: 10s
-        max_attempts: 5
-
+    - sasinetwork
   mongo:
     image: mongo
     environment:
-    - MONGO_INITDB_ROOT_USERNAME=devdb
-    - MONGO_INITDB_ROOT_PASSWORD=devdb123
+    - MONGO_INITDB_ROOT_USERNAME=sasi9100
+    - MONGO_INITDB_ROOT_PASSWORD=sasi9100
     volumes:
       - mongodb:/data/db
     restart: always
     networks:
-    - springappnetwork
-    
+    - sasinetwork
+
 volumes:
   mongodb:
-    external: true
-    
+    driver : local
+
 networks:
-  springappnetwork:
-    external: true
+  sasinetwork:
+    driver  : bridge
