--- a/javawebapp-deployment.yml
+++ b/javawebapp-deployment.yml
@@ -13,7 +13,7 @@ spec:
         name: javawebapp
     spec:
       containers:
-      - image: dockerhandson/java-web-app
+      - image: sasi0328/springapp
         name: javawebapp
         ports:
         - name: javawebapp
